--- a/Point-of-Sale/app/src/main/res/menu/menu_main.xml
+++ b/Point-of-Sale/app/src/main/res/menu/menu_main.xml
@@ -10,9 +10,17 @@
 
     <item
         android:id="@+id/action_reset"
-        android:title="Reset"
+        android:title="@string/reset"
         android:orderInCategory="100"
         android:icon="@android:drawable/ic_menu_revert"
+        app:showAsAction="ifRoom"
+        />
+
+    <item
+        android:id="@+id/action_search"
+        android:title="@string/search"
+        android:orderInCategory="100"
+        android:icon="@android:drawable/ic_menu_search"
         app:showAsAction="ifRoom"
         />
 </menu>
