--- a/Point-of-Sale/app/src/main/res/menu/menu_main.xml
+++ b/Point-of-Sale/app/src/main/res/menu/menu_main.xml
@@ -8,6 +8,13 @@
         android:title="@string/action_settings"
         app:showAsAction="never" />
 
+
+    <item
+        android:id="@+id/action_clear_all"
+        android:orderInCategory="100"
+        android:title="@string/clear_all"
+        app:showAsAction="never" />
+
     <item
         android:id="@+id/action_reset"
         android:title="@string/reset"
@@ -21,6 +28,6 @@
         android:title="@string/search"
         android:orderInCategory="100"
         android:icon="@android:drawable/ic_menu_search"
-        app:showAsAction="ifRoom"
+        app:showAsAction="always"
         />
 </menu>
